--- a/myclouds-docs/1.1 入门 - 简介.md
+++ b/myclouds-docs/1.1 入门 - 简介.md
@@ -1,5 +1,5 @@
 #### 概述
-MyClouds是一个基于成熟软件项目研发方法论和SpringCloud生态圈的插拔式轻量级微服务治理及快速开发平台。以“标准功能可复用、通用模块可配置、业务需求快速开发、异构系统无缝集成、应用性能可监控扩展、系统日志可分析审计”为目标， 帮助企业落实IT策略、屏蔽技术壁垒，快速实现可水平扩展的高性能高可用业务愿景。 为软件研发团队提供高效可控、随需应变、快速实现业务需求的全栈式技术解决方案，以最低成本和最低风险获得更高质量、更快交付业务和运维支持的核心技术竞争力。
+MyClouds是一个基于SpringBoot/Cloud生态和JavaEE技术栈的企业级微服务平台（微服务快速开发平台 & 微服务治理平台）。为软件研发团队快速交付高质量、可扩展的分布式企业微服务应用提供一站式有力支持。
 
 #### 适用场景
 MyClouds架构以互联网分布式应用开发优先并兼顾传统单体分层应用开发模式。因此，基于MyClouds丰富的组件体系，既能开发面向互联网的各类电商、金融、互联网+行业应用的PC端网站、管理系统、移动端H5应用、后台API接口服务等；也能快速开发面向传统软件行业的各类企业管理系统、各级各类政务信息化系统等。
@@ -15,7 +15,7 @@ MyClouds架构以互联网分布式应用开发优先并兼顾传统单体分层
 - 通用资源权限管理系统（参考实现）
 
 #### 愿景规划
-建一流微服务治理及快速开发平台，打造成熟稳定的技术组件生态和丰富的通用业务参考实现。
+建一流企业级微服务平台，打造成熟稳定的技术组件生态和丰富的通用业务参考实现。
 
 #### 发展轨迹
 - 2018-至今 MyClouds(https://gitee.com/osworks/MyClouds)
