--- a/myclouds-docs/6.2 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.2 附录 - 日常开发手记（后端）.md
@@ -1,1 +1,5 @@
-.keep
+> 收录了一些后台开发常用到的代码片段和奇技淫巧  
+
+- 开发Controller时候的标准姿势  
+   - 在myclouds开发中，由于我们进行了前后端分离，因此无论是开发管理页面的后端代码还是开发API接口的后端代码，其实都是统一的http api接口，所以在Controller类上我们直接使用`@RestController`注解，而不是`@Controller`注解。（@RestController可以简单的理解为是@Controller + @ResponseBody）
+   - 请求和相应的media type
