--- a/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
@@ -2,5 +2,5 @@
 
 - 开发Controller时候的标准姿势（常规情况）  
    - 在myclouds开发中，由于我们进行了前后端分离，因此无论是开发管理页面的后端代码还是开发API接口的后端代码，其实都是统一的http api接口，所以在Controller类上我们直接使用`@RestController`注解，而不是`@Controller`注解。（@RestController可以简单的理解为是@Controller + @ResponseBody）
-   - 请求和相应的media type都指定为application/json。即请求参数需要包装为json格式发出，响应数据也是JSON格式。如下所示：`@RequestMapping(value = "list", consumes="application/json", produces = "application/json")`其中consumes和produces 会分别在request头信息和response头信息中加入`Content-Type: application/json`。对应的接收请求参数的注解也应该为`@RequestBody Map<String, Object> inMap`或者`@RequestBody String jsonStr`，前者的写法会将客户端传来的json参数自动转换为Map。（扩展一下：如果要接收url的path参数和form形式的参数可以使用`@RequestParam Map<String,Object> inMap`来接收。）
+   - 请求和相应的media type都指定为application/json。即请求参数需要包装为json格式发出，响应数据也是JSON格式。如下所示：`@RequestMapping(value = "list", consumes="application/json", produces = "application/json")`其中consumes和produces 会分别在request头信息和response头信息中加入`Content-Type: application/json`。对应的接收请求参数的注解也应该为`@RequestBody Map<String, Object> inMap`或者`@RequestBody String jsonStr`，前者的写法会将客户端传来的json参数自动转换为Map，后者则接收原始的JSON字符串。（扩展一下：如果要接收url的path参数和form形式的参数可以使用`@RequestParam Map<String,Object> inMap`来接收。）
    - Controller里方法的返回参数可以直接是序列化好的json字符串，也可以是Java对象，只要是使用了`@RestController`注解或者`@Controller + @ResponseBody`注解，返回response时Java对象都会被自动转换为JSON后返回客户端。
