--- a/myclouds-docs/6.2 附录 - 设计原则与编码规范.md
+++ b/myclouds-docs/6.2 附录 - 设计原则与编码规范.md
@@ -2,5 +2,5 @@
 
 - 总想以“这代码写得太牛逼了”名垂青史，却总是以“我操，这什么鬼，傻逼...”收场。记住，“傻傻”的代码最可爱   
     `解读`：对于底层组件/类库而言，我们可能会看到一些貌似真的逼格很高的代码。但对于应用层面的功能模块代码，我们倡导的是：不在乎多写几行代码，只在乎简单易懂、一目了然。
-- 组合优于继承  
+- 组合优于继承，不要写飘逸着“鸡屎味”的代码  
    `解读`：类的多重继承和子类重写都会给开发和维护带来满地鸡屎的感觉。建议使用类的组合，保证每个类的单一内聚和清爽干净。
