将代码生成器实体类模版文件entity.java.vm生成实体的代码改为lombok注解方式。

--- a/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
@@ -6,4 +6,4 @@
    - Controller里方法的返回参数可以直接是序列化好的json字符串，也可以是Java对象，只要是使用了`@RestController`注解或者`@Controller + @ResponseBody`注解，返回response时Java对象都会被自动转换为JSON后返回客户端。 
 
 2. 值对象VO类和实体Entity类有什么区别？  
-首先，它们都是简单JavaBean，包含一系列属性定义，但不包含行为方法。其中，*VO类为开发过程中根据业务需要而自定义的任意属性的组合，如(OutVO.java)；*Entity类的属性则和数据库表一一对应，一张表对应一个Entity类，且由代码生成工具myclouds-builder负责自动生成，也不允许对其进行收工维护，如(MyUserEntity.java)。
+首先，它们都是简单JavaBean，包含一系列属性定义，但不包含行为方法。其中，*VO类为开发过程中根据业务需要而自定义的任意属性的组合，如(OutVO.java)；*Entity类的属性则和数据库表一一对应，一张表对应一个Entity类，且由代码生成工具myclouds-builder负责自动生成，也不允许对其进行手工维护，如(MyUserEntity.java)。
