--- a/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
+++ b/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
@@ -99,4 +99,4 @@ public class ExceptionControllerAdvice {
 - 如果你主动捕获了异常，请确认你有能力并清楚的知道应该怎么处理它。
 
 ### 写在最后
-本文只是从“实用主义”出发对异常处理进行了粗浅的讨论并给出了一些在myclouds开发环境下的准则和约束。水平有限，错漏在所难免。欢迎大家提出意见，交流探讨。
+本文只是从“实用主义”出发对异常处理进行了粗浅的讨论并给出了一些在myclouds开发环境下的准则和约束。大熊水平有限，错漏在所难免。欢迎大家提出意见，交流探讨。
