--- a/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
+++ b/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
@@ -1,6 +1,6 @@
  > 合理规范的异常处理，能最大限度的提升软件健壮性和代码质量。
 
-### 写在前面
+## 写在前面
  我们在业务系统开发过程中经常面临这样尴尬的问题：
  - 系统运行出错了，但是却找不到错误发生的位置
  - 找到了错误的位置，但去不知道为什么报错
@@ -9,7 +9,7 @@
 
 为了有效避免上述弊端，我们结合spring特性总结了一套行之有效的最佳实践来对异常进行了统一的处理。
 
-### MyClouds异常处理机制
+## MyClouds异常处理机制
 我们把异常简单的区分为全局业务异常和其它系统异常。
 - 全局业务异常定义 `BizException`  
 BizException继承自RuntimeException，并引入了2个属性：状态码（code）和提示消息（msg）。在后续的统一拦截中，这2个属性将被包装后返回给前端用于逻辑判断和提示。
@@ -77,7 +77,7 @@ public class ExceptionControllerAdvice {
 ```
 >如果你想把异常摘要信息也返回给前端的话，你可以通过`exception.getMessage();`和traceId组合后一起赋值给属性trace即可。（虽然我们不建议这么做）
 
-### 如何使用全局业务异常
+## 如何使用全局业务异常
 在业务代码编写过程中，我们可以通过抛出BizException来达到中断程序执行并给前端一个友好交互的效果。举个栗子：
 ``` java
 		if (...) {
@@ -94,9 +94,9 @@ public class ExceptionControllerAdvice {
 		}
 ```
 
-### 总结
+## 总结
 - 通常情况无论在Controller层还是Service层，都不要去随意try cache，所有异常都往外抛给平台和容器统一处理。
 - 如果你主动捕获了异常，请确认你有能力并清楚的知道应该怎么处理它。
 
-### 写在最后
+## 写在最后
 本文只是从“实用主义”出发对异常处理进行了粗浅的讨论并给出了一些在[myclouds开发环境](https://gitee.com/osworks/MyClouds)下的准则和约束。大熊水平有限，错漏在所难免。欢迎大家提出意见，交流探讨。
