--- a/myclouds-docs/1.1 入门 - 简介.md
+++ b/myclouds-docs/1.1 入门 - 简介.md
@@ -1,23 +1,23 @@
-#### 概述
+## 概述
 MyClouds是一个基于SpringBoot/Cloud生态和JavaEE技术栈的企业级微服务平台（微服务快速开发平台 & 微服务治理平台）。支持研发团队快速交付高质量、可扩展的企业分布式微服务应用。
 
-#### 适用场景
+## 适用场景
 MyClouds架构以互联网分布式应用开发优先并兼顾传统单体分层应用开发模式。因此，基于MyClouds丰富的组件体系，既能开发面向互联网的各类电商、金融、互联网+行业应用的PC端网站、管理系统、移动端H5应用、后台API接口服务等；也能快速开发面向传统软件行业的各类企业管理系统、各级各类政务信息化系统等。
 
-#### 前端技术选型
+## 前端技术选型
 - [Ant Design Pro based React](https://pro.ant.design)
 
-#### 后端技术选型
+## 后端技术选型
 - Spring/SpringCloud生态圈
 - SpringBoot技术栈
 
-#### 缺省预置组件
+## 缺省预置组件
 - 通用资源权限管理系统（参考实现）
 
-#### 愿景规划
+## 愿景规划
 建一流企业级微服务平台，打造成熟稳定的技术组件生态和丰富的通用业务参考实现。
 
-#### 发展轨迹
+## 发展轨迹
 - 2018-至今 MyClouds(https://gitee.com/osworks/MyClouds)
 - 2014-2017 AOSuite (https://gitee.com/osworks/AOS)
 - 2008-2013 G4Studio (https://gitee.com/osworks/G4Studio)
