--- a/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
+++ b/myclouds-docs/2.2.5 进阶 - 异常处理最佳实践.md
@@ -94,9 +94,12 @@ public class ExceptionControllerAdvice {
 		}
 ```
 
-## 总结
+## 总结一下
 - 通常情况无论在Controller层还是Service层，都不要去随意try cache，所有异常都往外抛给平台和容器统一处理。
 - 如果你主动捕获了异常，请确认你有能力并清楚的知道应该怎么处理它。
 
 ## 写在最后
-本文只是从“实用主义”出发对异常处理进行了粗浅的讨论并给出了一些在[myclouds开发环境](https://gitee.com/osworks/MyClouds)下的准则和约束。大熊水平有限，错漏在所难免。欢迎大家提出意见，交流探讨。
+本文只是从“实用主义”出发对异常处理进行了粗浅的讨论并给出了一些在[myclouds开发环境](https://gitee.com/osworks/MyClouds)下的准则和约束。*阿老表水平有限，错漏在所难免，欢迎批评指正、交流进步。*
+
+## 关于作者
+熊春（网名：阿老表），开源爱好者。代表作有：[MyClouds企业级微服务平台](https://gitee.com/osworks/MyClouds)。
