--- a/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
+++ b/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
@@ -5,12 +5,12 @@
 > 言外之意：“跨域”是针对网页中通过XMLHttpRequest对象发起的ajax请求才会出现的问题。在Android和IOS原生开发、测试工具调用、微服务与微服务之间的调用都是不存在跨域问题的。这点需要先厘清楚。
 
 ## 跨域问题常用解决办法
-> 根据上述可知，其实无论是哪种办法，本质都是要往response的头信息中追加Access-Control-*相关的属性，只是实现方式不同而已。
+根据上述可知，其实无论是哪种办法，本质都是要往response的头信息中追加`Access-Control-*`相关的属性，只是实现方式不同而已。
 
 1. ### 强撸
-这是一种最简单粗暴也很有效的方法。即在能获取`HttpServletResponse`对象的上下文环境中，使用`response.addHeader();`方法来增加Access-Control-*相关属性。这种上下文有可能是具体的某个Controller方法，也可以是原生Servlet环境亦或是Struts、SpringMVC的过滤器、拦截器等。下面以SpringMVC的拦截器举例说明。
+这是一种最简单粗暴也很有效的方法。即在能获取`HttpServletResponse`对象的上下文环境中，使用`response.addHeader();`方法来增加`Access-Control-*`相关属性。这种上下文有可能是具体的某个Controller方法，也可以是原生Servlet环境亦或是Struts、SpringMVC的过滤器、拦截器等。下面以SpringMVC的拦截器举例说明。
 ``` java
-public class CrossInterceptor extends HandlerInterceptorAdapter {
+public class CrossOriginInterceptor extends HandlerInterceptorAdapter {
 	@Override
 	public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler)
 			throws Exception {
@@ -22,8 +22,79 @@ public class CrossInterceptor extends HandlerInterceptorAdapter {
         }
         return true;
     }
-}  
+}
+//com.gitee.myclouds.system.common.interceptor.CrossOriginInterceptor.java
 ```
-> 拦截器需要在`WebMvcConfigurationSupport`的实现类中注册才会生效。这里就不展开了，具体注册方法请查阅本系列教程的另外一篇文章《进阶 - Web拦截器介绍与应用》。
+> 拦截器需要在`WebMvcConfigurationSupport`的实现类中注册才会生效。下面是代码片段。   
+> 
+``` java
+	@Override
+	public void addInterceptors(InterceptorRegistry registry) {
+		registry.addInterceptor(new CrossInterceptor());
+	}
+```
+> 具体注册方法请查阅本系列教程的另外一篇文章《进阶 - Web拦截器介绍与应用》。
 
-1. ### 注解
+- ### 注解
+在SpringMVC的环境下，我们也可以在Controller的类上或方法使用`@CrossOrigin`注解来实现跨域，`Access-Control-*`相关属性也会自动的追加到response头信息里去。  
+>这种方式的优劣是很明显的，大家根据实际情况酌情使用。@CrossOrigin(~~如果需要，这里可以设置具体属性值~~)：`@CrossOrigin(value="*", allowCredentials="true")`
+
+- ### 服务网关统一设置
+这是在微服务开发中特有的一种方式，也是myclouds所推荐的方式。具体实现看后续章节。
+
+## [MyClouds](https://gitee.com/osworks/MyClouds)在跨域问题上的优雅实践
+由于微服务开发模式中服务网关（muclouds-gateway）的存在，使得我们可以把很多通用的非功能性需求都剥离到服务网关来做（诸如：鉴权、日志、限流、跨域、灰度发布等），让每一个微服务自身专心去解决业务相关的问题。不仅在功能和职责划分和上清晰了然也减轻了代码的冗余度和技术上组件依赖的复杂度。即所谓“做自己该做很擅长做的事”。 
+ 
+铺垫了这么多，那具体怎么做呢？这里还得先再讲一下另外一个“故事”。在很久很久以前，SpringCloud生态的gateway组件是直接集成了netflix的zuul1.x。但zuul1.x是基于servlet的一堆filter来做的，其原理还是thread per connection的多线程同步阻塞模型。其性能表现不佳，呼之欲出的zuul2.0一直难产。从失望到绝望的spring cloud社区只能撸起袖子自己开干了，这不社区官方的网关[spring-cloud-gateway](https://github.com/spring-cloud/spring-cloud-gateway)终于破茧而出了。他完全跳出了传统Servlet和Spring WebMVC的架构，基于Webflux响应式编程的异步非阻塞模型，我们可以简单粗暴的理解为是Queue*(push+callback)*+Event Loop Thread + Queue*(push+callback)*的机制。*（后来zuul2.0还是出了，不过亲儿子出生了，干儿子表示我很尴尬...）*
+> 更多内容就不展开了，这里建议大家接着去了解一下“同步阻塞模型”和“异步非阻塞模型”的区别和优劣。
+
+上述已经阐明一个关键问题，spring cloud gateway基于spring webflux而非spring webmvc。因此，之前介绍的几种解决办法都失效了。但，基本原理还是一样的，最终目的都是要在response的头信息中追加`Access-Control-*`属性。 cloud gateway也提供了2种自己的解决办法。
+
+1. ### ~~WebFilter方式~~*（✘）*
+我们不推荐这种方式，不过给出如下参考代码。
+``` java
+public class MyFilter implements WebFilter{
+	@Override
+	public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
+		ServerHttpResponse response = exchange.getResponse();
+		HttpHeaders headers = response.getHeaders();
+		//这里可以开始进行跨域处理了
+		headers.add(headerName, headerValue);
+		...
+		return chain.filter(exchange);
+	}
+}
+```
+
+2. ### 配置方式（✔）
+这也是myclouds-gateway的缺省和推荐的处理方式。直接在application.yml文件中配置。可以针对path匹配进行跨域规则配置，达到细粒度的控制。  
+``` yml
+...
+gateway:      
+  globalcors:        
+    corsConfigurations:
+      '[/**]': 
+        allowedOrigins: "*" 
+		maxAge: 86400
+        allowedMethods:
+        - GET
+		- POST
+```
+
+## 总结一下
+“跨域”问题虽小，但涉及的知识点还挺多。我们一起回顾一下。
+- HTTP request/response原理和head头信息基础知识。
+- 浏览器的同源安全策略和带来的“跨域”问题。
+- “跨域”是针对Ajax而言，不要和其它情况混为一谈。
+- WebMVC下解决跨域的集中方式：response强撸、拦截器、注解等。
+- Spring拦截器的原理和使用。
+- 服务网关的定位与作用、微服务和和服务网关的关系以及各自扮演的角色。
+- 响应式编程、Webflux的认识。
+- 传统Servlet的多线程同步阻塞模型和Webflux的异步非阻塞模型。
+- spring cloud gateway的基础知识及其处理跨域的方法。
+
+## 写在最后
+本文不仅从“实用主义”出发对"跨域"问题给出了行之有效的解决办法，还围绕“跨域”展开了一些相关知识点的探讨，希望对大家能有所帮助。*阿老表水平有限，错漏在所难免，欢迎批评指正、交流进步。*
+
+## 关于作者
+熊春（网名：阿老表），开源爱好者。代表作有：[MyClouds企业级微服务平台](https://gitee.com/osworks/MyClouds)。
