--- a/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
+++ b/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
@@ -1,4 +1,4 @@
- > “跨域”是在前后端分离开发中必然会遇到的一个小问题，解决它并不困难，方法也很多。但它涉及的知识点还挺多，因此我觉得很有必要花点时间总结一下并给出myclouds处理跨域问题的优雅实践。
+ > “跨域”是在前后端分离开发中必然会遇到的一个小问题，解决它并不困难，方法也很多。但它涉及的知识点还不少，因此我觉得很有必要花点时间总结一下并给出myclouds处理跨域问题的优雅实践。
 
 ## 写在前面
 关于“跨域”的一些基础知识这里就不讨论了，如果需要先充电的同学请移步这里看看：[跨域资源共享 CORS 详解](http://www.ruanyifeng.com/blog/2016/04/cors.html)。在这里，我就直接抛出问题：由于浏览器出于安全目的而制定的[“同源策略”](http://www.ruanyifeng.com/blog/2016/04/same-origin-policy.html)，导致Web页面通过XMLHttpRequest发起ajax请求的时候，如果访问非同源服务接口，则报错：`has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.`。
