--- a/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
+++ b/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
@@ -95,6 +95,7 @@ gateway:
 
 ## 写在最后
 本文不仅从“实用主义”出发对"跨域"问题给出了行之有效的解决办法，还围绕“跨域”展开了一些相关知识点的探讨，希望对大家能有所帮助。*阿老表水平有限，错漏在所难免，欢迎批评指正、交流进步。*
+>郑重声明：本人自愿放弃文章版权，鼓励无下限抄袭，欢迎转载无需说明出处。
 
 ## 关于作者
 熊春（网名：阿老表），开源爱好者。代表作有：[MyClouds企业级微服务平台](https://gitee.com/osworks/MyClouds)。
