--- a/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
+++ b/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
@@ -25,13 +25,16 @@ public class CrossOriginInterceptor extends HandlerInterceptorAdapter {
 }
 //com.gitee.myclouds.system.common.interceptor.CrossOriginInterceptor.java
 ```
-> 拦截器需要在`WebMvcConfigurationSupport`的实现类中注册才会生效。下面是代码片段。   
+> 拦截器需要在`WebMvcConfigurer`的实现类中注册才会生效。下面是代码片段。   
 > 
 ``` java
+@Configuration
+public class MyConfiguration implements WebMvcConfigurer{
 	@Override
 	public void addInterceptors(InterceptorRegistry registry) {
-		registry.addInterceptor(new CrossInterceptor());
+		registry.addInterceptor(new CrossOriginInterceptor());
 	}
+}
 ```
 > 具体注册方法请查阅本系列教程的另外一篇文章《进阶 - Web拦截器介绍与应用》。
 
