--- a/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
@@ -1,9 +1,15 @@
 > 收录了一些后台开发常用到的代码片段和奇技淫巧  
 
-1. 开发Controller时候的标准姿势（常规情况）  
-   - 在myclouds开发中，由于我们进行了前后端分离，因此无论是开发管理页面的后端代码还是开发API接口的后端代码，其实都是统一的http api接口，所以在Controller类上我们直接使用`@RestController`注解，而不是`@Controller`注解。（@RestController可以简单的理解为是@Controller + @ResponseBody）
-   - 请求和相应的media type都指定为application/json。即请求参数需要包装为json格式发出，响应数据也是JSON格式。如下所示：`@RequestMapping(value = "list", consumes="application/json", produces = "application/json")`其中consumes和produces 会分别在request头信息和response头信息中加入`Content-Type: application/json`。对应的接收请求参数的注解也应该为`@RequestBody Map<String, Object> inMap`或者`@RequestBody String jsonStr`，前者的写法会将客户端传来的json参数自动转换为Map，后者则接收原始的JSON字符串。（扩展一下：如果要接收url的path参数和form形式的参数可以使用`@RequestParam Map<String,Object> inMap`来接收。）
-   - Controller里方法的返回参数可以直接是序列化好的json字符串，也可以是Java对象，只要是使用了`@RestController`注解或者`@Controller + @ResponseBody`注解，返回response时Java对象都会被自动转换为JSON后返回客户端。 
+1. ### Controller类里的几个常用注解  
+  - @Controller和@RestController  
+  在类上的注解，@Controller能返回视图对象也能返回JSON（方法上再组合@ResponseBody），而@RestController只能返回JSON对象，其功能相当于是@Controller + @ResponseBody的组合效果。
+ - @RequestMapping注解中的consumes="application/json"和produces = "application/json"  
+    - `consumes`用法会在request的头信息中指明Content-Type为application/json。这就意味着调用方只能以request body的方式提交json消息体作为请求参数，而接收方则只能使用@RequestBody Map<String, Object> inMap或者@RequestBody String jsonStr，前者的写法会将客户端传来的json参数自动转换为Map，后者则接收原始的JSON字符串。
+	- `produces`用法会在request的头信息中指明Content-Type为application/json。这将给调用方处理返回消息的时候提供一些便利。
+  - @RequestBody和@RequestParam
+  这两个注解都是写在方法签名上的，@RequestBody用于接收通过请求消息体提交的json参数，@RequestParam用于接收客户端提交的表单参数和url附加的参数。
+  - @CrossOrigin  
+  Controller的类上或方法使用的注解。可以实现跨域，将`Access-Control-*`相关属性追加到response头信息里去。@CrossOrigin(value="*", allowCredentials="true")。关于“跨域”的更多用法，请查阅《进阶 - 关于跨域问题的总结》。
 
-2. 值对象VO类和实体Entity类有什么区别？  
+- ### 值对象VO类和实体Entity类有什么区别？  
 首先，它们都是简单JavaBean，包含一系列属性定义，但不包含行为方法。其中，*VO类为开发过程中根据业务需要而自定义的任意属性的组合，如(OutVO.java)；*Entity类的属性则和数据库表一一对应，一张表对应一个Entity类，且由代码生成工具myclouds-builder负责自动生成，也不允许对其进行手工维护，如(MyUserEntity.java)。
