--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -2,7 +2,7 @@
 
 ## 关于[layui admin](https://www.layui.com/admin/)版权，不得不先澄清的事
 [layui](https://www.layui.com) 是基于MIT开源协议的UI库，而layui admin则是layui官方基于layui开发的一套用于实现中后台管理的前端模版系统，且这套模版是需要**商业授权**的付费版本。因此，如果你选择基于layui admin开发，请您到其[官网](https://www.layui.com/admin/)获取商业授权。我们不会以任何形式提供layui admin的任何资源文件，也不接受任何关于其授权问题的咨询。*提示：myclouds使用layui admin的 iframe版本。*
-> 提示：[layui admin](https://www.layui.com/admin/)（商业授权），[ant design pro](https://pro.ant.design/index-cn)（MIT开源协议）。这两套UI都是[myclouds](https://gitee.com/osworks/MyClouds)缺省支持和适配的非常优秀的前端开发框架。我们隆重推荐你首选layui admin，*长得不错，关键是活好*。
+> 提示：[layui admin](https://www.layui.com/admin/)（商业授权），[ant design pro](https://pro.ant.design/index-cn)（MIT开源协议）。这两套UI都是[myclouds](https://gitee.com/osworks/MyClouds)缺省支持和适配的非常优秀的前端开发框架。我们隆重推荐你首选layui admin，长得不错，关键是活好。
 
 ## 可能有用的代码片段
 [layui官网](https://www.layui.com)有丰富的示例和文档，建议大家可以先仔细体验和阅读。关于前端开发的问题、经验可以直接去layui社区咨询、分享。这里仅收录一些可能会用到的零散代码片段，供参考。
