--- a/myclouds-docs/6.3.2 附录 - 日常开发手记（前端Ant Design Pro）.md
+++ b/myclouds-docs/6.3.2 附录 - 日常开发手记（前端Ant Design Pro）.md
@@ -1,1 +1,1 @@
-.keep
+>[myclouds](https://gitee.com/osworks/MyClouds)采用前后端完全分离的开发模式。因此，同一套后台接口可以适配多套前端UI，我们缺省适配了[layui admin](https://www.layui.com/admin/)和[ant design pro](https://pro.ant.design/index-cn)。你可以根据实际情况，酌情选择。
