--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -1,4 +1,4 @@
->[myclouds](https://gitee.com/osworks/MyClouds)采用前后端完全分离的开发模式。因此，同一套后台接口可以适配多套前端UI，我们缺省实现了[layui admin](https://www.layui.com/admin/)和[ant design pro](https://pro.ant.design/index-cn)。你可以根据实际情况，酌情选择。
+>[myclouds](https://gitee.com/osworks/MyClouds)采用前后端完全分离的开发模式。因此，同一套后台接口可以适配多套前端UI，我们缺省适配了[layui admin](https://www.layui.com/admin/)和[ant design pro](https://pro.ant.design/index-cn)。你可以根据实际情况，酌情选择。
 
 ## 关于[layui admin](https://www.layui.com/admin/)版权，不得不先澄清的事
 [layui](https://www.layui.com) 是基于MIT开源协议的UI库，而layui admin则是layui官方基于layui开发的一套用于实现中后台管理的前端模版系统，且这套模版是需要**商业授权**的付费版本。因此，如果你选择基于layui admin开发，请您到其[官网](https://www.layui.com/admin/)获取商业授权。我们不会以任何形式提供layui admin的任何资源文件，也不接受任何关于其授权问题的咨询。*提示：myclouds使用layui admin的 iframe版本。*
@@ -12,7 +12,7 @@
 $('#id-btn-query').on('click', fnListTable);  
 $('.mydiv .my-btn-query').on('click', fnListTable);
 ```
-- #### 阻止表单跳转
+2. #### 阻止表单跳转
 JQ：e.preventDefault();  
 LAYUI:  
 ``` javascript
@@ -21,7 +21,12 @@ form.on('submit(lf-btn-query)', function(data){
 	return false; // 返回false，阻止表单跳转。
 });
 ```
-- #### js对象转json字符串
+3. #### js对象转json字符串
 ``` javascript
 layer.msg(JSON.stringify(data.field));
 ```
+4. #### 关于admin.css
+``` html
+<link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
+```
+这个css文件是功能模块主页面才需要引入的，弹窗页面不需要。（弹窗页面背景灰色也是引入了这个样式的缘故）
