--- a/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
@@ -11,5 +11,5 @@
   - @CrossOrigin  
   Controller的类上或方法使用的注解。可以实现跨域，将`Access-Control-*`相关属性追加到response头信息里去。@CrossOrigin(value="*", allowCredentials="true")。关于“跨域”的更多用法，请查阅《进阶 - 关于跨域问题的总结》。
 
-- ### 值对象VO类和实体Entity类有什么区别？  
+2. ### 值对象VO类和实体Entity类有什么区别？  
 首先，它们都是简单JavaBean，包含一系列属性定义，但不包含行为方法。其中，*VO类为开发过程中根据业务需要而自定义的任意属性的组合，如(OutVO.java)；*Entity类的属性则和数据库表一一对应，一张表对应一个Entity类，且由代码生成工具myclouds-builder负责自动生成，也不允许对其进行手工维护，如(MyUserEntity.java)。
