--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -4,7 +4,7 @@
 [layui](https://www.layui.com) 是基于MIT开源协议的UI库，而layui admin则是layui官方基于layui开发的一套用于实现中后台管理的前端模版系统，且这套模版是需要**商业授权**的付费版本。因此，如果你选择基于layui admin开发，请您到其[官网](https://www.layui.com/admin/)获取商业授权。我们不会以任何形式提供layui admin的任何资源文件，也不接受任何关于其授权问题的咨询。*提示：myclouds使用layui admin的 iframe版本。*
 > 提示：[layui admin](https://www.layui.com/admin/)（商业授权），[ant design pro](https://pro.ant.design/index-cn)（MIT开源协议）。这两套UI都是[myclouds](https://gitee.com/osworks/MyClouds)缺省支持和适配的非常优秀的前端开发框架。我们隆重推荐您首选layui admin，据说器大活好人见人爱。当然，如果你有专业的前端攻城狮的话，antd pro也是不错的选择。
 
-## 可能有用的代码片段
+## 可能有用的代码片段（JQuery + LayUI）
 [layui官网](https://www.layui.com)有丰富的示例和文档，建议大家可以先仔细体验和阅读。关于前端开发的问题、经验可以直接去layui社区咨询、分享。这里仅收录一些可能会用到的零散代码片段，供参考。
 
 1. #### 事件绑定
@@ -21,6 +21,11 @@ form.on('submit(lf-btn-query)', function(data){
 	return false; // 返回false，阻止表单跳转。
 });
 ```
+其实，最好办法是直接把提交按钮设为`type="button"`就没这问题了。
+``` html
+<button class="layui-btn layui-btn-primary" lay-submit lay-filter="lf-btn-query" type="button">
+```
+
 3. #### js对象转json字符串
 ``` javascript
 layer.msg(JSON.stringify(data.field));
@@ -30,3 +35,29 @@ layer.msg(JSON.stringify(data.field));
 <link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
 ```
 这个css文件是功能模块主页面才需要引入的，弹窗页面不需要。（弹窗页面背景灰色也是引入了这个样式的缘故）
+
+5. #### 表单常用操作
+  - 序列化成URL编码字符串：$(selector).serialize()  
+     输出：`a=1&b=2&c=3`
+  - 序列化成对象数组（名称和值）：$(selector).serializeArray()  
+		```
+		[ 
+		  {name: 'firstname', value: 'Hello'}, 
+		  {name: 'lastname', value: 'World'}
+		]
+		```
+  - 序列化成Json对象：myutil.serialize(selector)  
+    输出：`{"a":1, "b":2, "c":3}`  （使用这个方法需要使用layui.use引入对myutil模块的依赖）  
+	具体实现代码如下  
+	``` javascript
+	//将表单序列化为json对象
+	serialize: function(selector) {
+		var jsonData = {};
+		$.each($(selector).serializeArray(), function(index) {
+			if (this['value']) {
+				jsonData[this['name']] = this['value'];
+			}
+		});
+		return jsonData;
+	}
+	```
