--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -61,3 +61,41 @@ layer.msg(JSON.stringify(data.field));
 		return jsonData;
 	}
 	```
+  - 操作CSS类和Dom属性，动态设置CSS和禁用按钮
+   ``` javascript
+   $('#btn-batch-del').addClass('layui-btn-disabled').attr('disabled',"true");
+   ```
+   
+6. #### 表格常用操作
+  - 行操作按钮
+  ``` javascript
+  //监听表格操作集
+  table.on('tool(t-dict)', function(obj) {
+  	var data = obj.data;
+  	if (obj.event === 'del') {
+  		layer.confirm('确定删除当前数据字典吗？', {icon:3},function(index) {
+  			layer.close(index);
+			//obj.del(); //客户端删除当前行
+			$ajax.del(); //服务端删除当前行
+			table.reload();
+  		});
+  	} else if (obj.event === 'edit') {
+		
+  	}
+  });
+  ```
+7. #### 弹窗layer的常用操作
+  - 如何在父页面调用弹窗页面的方法或赋值
+``` javascript
+layer.open({
+	  type: 2,
+	  content: 'test/iframe.html',
+	  success: function(layero, index){
+		var body = layer.getChildFrame('body', index);
+		//得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
+		var iframeWin = window[layero.find('iframe')[0]['name']];
+		console.log(body.html()) //得到iframe页的body内容
+		body.find('input').val('Hi，我是从父页来的')
+	  }
+});      
+```
