--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -26,9 +26,10 @@ form.on('submit(lf-btn-query)', function(data){
 <button class="layui-btn layui-btn-primary" lay-submit lay-filter="lf-btn-query" type="button">
 ```
 
-3. #### js对象转json字符串
+3. #### js对象和json字符串互转
 ``` javascript
-layer.msg(JSON.stringify(data.field));
+var jsonStr = JSON.stringify(jsonObj);
+var jsonObj = JSON.parse(jsonStr);
 ```
 4. #### 关于admin.css
 ``` html
@@ -61,9 +62,10 @@ layer.msg(JSON.stringify(data.field));
 		return jsonData;
 	}
 	```
-  - 操作CSS类和Dom属性，动态设置CSS和禁用按钮
+  - 操作CSS类和Dom属性，动态设置CSS和禁用/启用按钮
    ``` javascript
    $('#btn-batch-del').addClass('layui-btn-disabled').attr('disabled',"true");
+	 $('#btn-batch-del').removeClass('layui-btn-disabled').removeAttr('disabled');
    ```
    
 6. #### 表格常用操作
