--- a/myclouds-docs/1.1 入门 - 简介.md
+++ b/myclouds-docs/1.1 入门 - 简介.md
@@ -1,5 +1,5 @@
-## 概述
-MyClouds是一个基于SpringBoot/Cloud生态和JavaEE技术栈的企业级微服务平台（微服务快速开发平台 & 微服务治理平台）。支持研发团队快速交付高质量、可扩展的企业分布式微服务应用。
+﻿## 概述
+MyClouds是一个基于SpringBoot/Cloud生态和JavaEE技术栈的企业级微服务平台（微服务快速开发框架 & 微服务治理工具集）。支持研发团队快速交付高质量、可扩展的企业分布式微服务应用。
 
 ## 适用场景
 MyClouds架构以互联网分布式应用开发优先并兼顾传统单体分层应用开发模式。因此，基于MyClouds丰富的组件体系，既能开发面向互联网的各类电商、金融、互联网+行业应用的PC端网站、管理系统、移动端H5应用、后台API接口服务等；也能快速开发面向传统软件行业的各类企业管理系统、各级各类政务信息化系统等。
