--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -40,6 +40,7 @@ var jsonObj = JSON.parse(jsonStr);
 5. #### 表单常用操作
   - 序列化成URL编码字符串：$(selector).serialize()  
      输出：`a=1&b=2&c=3`
+
   - 序列化成对象数组（名称和值）：$(selector).serializeArray()  
 		```
 		[ 
@@ -47,6 +48,7 @@ var jsonObj = JSON.parse(jsonStr);
 		  {name: 'lastname', value: 'World'}
 		]
 		```
+
   - 序列化成Json对象：myutil.serialize(selector)  
     输出：`{"a":1, "b":2, "c":3}`  （使用这个方法需要使用layui.use引入对myutil模块的依赖）  
 	具体实现代码如下  
@@ -62,6 +64,7 @@ var jsonObj = JSON.parse(jsonStr);
 		return jsonData;
 	}
 	```
+
   - 操作CSS类和Dom属性，动态设置CSS和禁用/启用按钮
    ``` javascript
    $('#btn-batch-del').addClass('layui-btn-disabled').attr('disabled',"true");
@@ -86,6 +89,22 @@ var jsonObj = JSON.parse(jsonStr);
   	}
   });
   ```
+
+ - done监听和parseData监听的区别  
+   done是表格dom渲染完成的监听函数，parseData是数据加载完成的监听函数。因此，如果要对dom进行操作，则需要在done中去处理。如下代码所示（根据条件，控制行复选框的示例）。
+	``` javascript
+	done: function(res, curr, count) {
+		$.each(res.data, function(index, obj) {
+			if (obj.children.length > 0) {
+				var domP = $('.layui-table-body').find('tr[data-index="' + obj.lay_table_index + '"]').find('td:first').find(
+					'p');
+				domP.find('input').remove();
+				domP.find('div').empty();
+			}
+		});
+	}
+	```
+
 7. #### 弹窗layer的常用操作
   - 如何在父页面调用弹窗页面的方法或赋值
 ``` javascript
@@ -101,3 +120,6 @@ layer.open({
 	  }
 });      
 ```
+8. #### 选择器
+  - $('.mydiv .mydiv2')和$('.mydiv.mydiv2')的区别  
+	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
