--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -121,5 +121,5 @@ layer.open({
 });      
 ```
 8. #### 选择器
-  - $('.mydiv .mydiv2')和$('.mydiv.mydiv2')的区别  
+  - $(".mydiv .mydiv2")和$(".mydiv.mydiv2")的区别  
 	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
