--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -11,6 +11,7 @@
 ``` javascript
 $('#id-btn-query').on('click', fnListTable);  
 $('.mydiv .my-btn-query').on('click', fnListTable);
+$(document).on("click", function() {});
 ```
 2. #### 阻止表单跳转
 JQ：e.preventDefault();  
@@ -123,3 +124,9 @@ layer.open({
 8. #### 选择器
   - `$('.mydiv .mydiv2')`和`$('.mydiv.mydiv2')`的区别  
 	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
+
+9. #### 常用jqery方法
+ - $(selector).toggle()
+   切换元素的可见状态。如果被选元素可见，则隐藏这些元素，如果被选元素隐藏，则显示这些元素。
+  - $(selector).toggleClass('class')  
+    该方法检查每个元素中指定的类。如果不存在则添加类，如果已设置则删除之。
