--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -130,16 +130,19 @@ layer.open({
 9. #### 常用jqery方法
  - $(selector).toggle()
    切换元素的可见状态。如果被选元素可见，则隐藏这些元素，如果被选元素隐藏，则显示这些元素。
-  - $(selector).toggleClass('class')  
+   
+ - $(selector).toggleClass('class')  
     该方法检查每个元素中指定的类。如果不存在则添加类，如果已设置则删除之。
-  - $.load(url, data, func);  
+	
+ - $.load(url, data, func);  
     该方法将服务器加载的数据直接插入到指定DOM中。其中data如果存在则使用POST方式发送请求，不存在则使用GET方式发送请求。举个栗子。
-```
+``` html
 <div id="ret"></div>
-	$('#ret').load(
-		"/greet",
-		{name: 'xiongchun'}
-	);
+$('#ret').load(
+	"/greet",
+	{name: 'xiongchun'}
+);
 ```
-  - $.getScript()  
+
+ - $.getScript()  
     该方法使用GET方式执行Ajax请求，从服务器加载并执行回传的JavaScript。其实也就是dataType="script"的ajax的缩写形式。
