--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -8,34 +8,34 @@
 [layui官网](https://www.layui.com)有丰富的示例和文档，建议大家可以先仔细体验和阅读。关于前端开发的问题、经验可以直接去layui社区咨询、分享。这里仅收录一些可能会用到的零散代码片段，供参考。
 
 1. #### 事件绑定
-	``` javascript
-	$('#id-btn-query').on('click', fnListTable);  
-	$('.mydiv .my-btn-query').on('click', fnListTable);
-	$(document).on("click", function() {});
-	```
+``` javascript
+$('#id-btn-query').on('click', fnListTable);  
+$('.mydiv .my-btn-query').on('click', fnListTable);
+$(document).on("click", function() {});
+```
 2. #### 阻止表单跳转
 JQ：e.preventDefault();  
 LAYUI:  
-	``` javascript
-	form.on('submit(lf-btn-query)', function(data){
-		fnListTable(data.field);
-		return false; // 返回false，阻止表单跳转。
-	});
-	```
+``` javascript
+form.on('submit(lf-btn-query)', function(data){
+	fnListTable(data.field);
+	return false; // 返回false，阻止表单跳转。
+});
+```
 其实，最好办法是直接把提交按钮设为`type="button"`就没这问题了。
-	``` html
-	<button class="layui-btn layui-btn-primary" lay-submit lay-filter="lf-btn-query" type="button">
-	```
+``` html
+<button class="layui-btn layui-btn-primary" lay-submit lay-filter="lf-btn-query" type="button">
+```
 
 3. #### js对象和json字符串互转
-	``` javascript
-	var jsonStr = JSON.stringify(jsonObj);
-	var jsonObj = JSON.parse(jsonStr);
-	```
+``` javascript
+var jsonStr = JSON.stringify(jsonObj);
+var jsonObj = JSON.parse(jsonStr);
+```
 4. #### 关于admin.css
-	``` html
-	<link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
-	```
+``` html
+<link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
+```
 这个css文件是功能模块主页面才需要引入的，弹窗页面不需要。（弹窗页面背景灰色也是引入了这个样式的缘故）
 
 5. #### 表单常用操作
@@ -43,84 +43,81 @@ LAYUI:
      输出：`a=1&b=2&c=3`
 
   - 序列化成对象数组（名称和值）：$(selector).serializeArray()  
-		```
-		[ 
-		  {name: 'firstname', value: 'Hello'}, 
-		  {name: 'lastname', value: 'World'}
-		]
-		```
+```
+[ 
+  {name: 'firstname', value: 'Hello'}, 
+  {name: 'lastname', value: 'World'}
+]
+```
 
   - 序列化成Json对象：myutil.serialize(selector)  
     输出：`{"a":1, "b":2, "c":3}`  （使用这个方法需要使用layui.use引入对myutil模块的依赖）  
 	具体实现代码如下  
-	``` javascript
-	//将表单序列化为json对象
-	serialize: function(selector) {
-		var jsonData = {};
-		$.each($(selector).serializeArray(), function(index) {
-			if (this['value']) {
-				jsonData[this['name']] = this['value'];
-			}
-		});
-		return jsonData;
-	}
-	```
+``` javascript
+//将表单序列化为json对象
+serialize: function(selector) {
+	var jsonData = {};
+	$.each($(selector).serializeArray(), function(index) {
+		if (this['value']) {
+			jsonData[this['name']] = this['value'];
+		}
+	});
+	return jsonData;
+}
+```
 
   - 操作CSS类和Dom属性，动态设置CSS和禁用/启用按钮
-	``` javascript
-	$('#btn-batch-del').addClass('layui-btn-disabled').attr('disabled',"true");
-	$('#btn-batch-del').removeClass('layui-btn-disabled').removeAttr('disabled');
-	```
+``` javascript
+$('#btn-batch-del').addClass('layui-btn-disabled').attr('disabled',"true");
+$('#btn-batch-del').removeClass('layui-btn-disabled').removeAttr('disabled');
+```
    
 6. #### 表格常用操作
-  - 行操作按钮
-	``` javascript
-	//监听表格操作集
-	table.on('tool(t-dict)', function(obj) {
-	var data = obj.data;
-	if (obj.event === 'del') {
-		layer.confirm('确定删除当前数据字典吗？', {icon:3},function(index) {
-			layer.close(index);
-			//obj.del(); //客户端删除当前行
-			$ajax.del(); //服务端删除当前行
-			table.reload();
-		});
-	} else if (obj.event === 'edit') {
-		
-	}
+  - 行操作按钮  
+``` javascript
+//监听表格操作集
+table.on('tool(t-dict)', function(obj) {
+var data = obj.data;
+if (obj.event === 'del') {
+	layer.confirm('确定删除当前数据字典吗？', {icon:3},function(index) {
+		layer.close(index);
+		//obj.del(); //客户端删除当前行
+		$ajax.del(); //服务端删除当前行
+		table.reload();
 	});
-	```
-
- - done监听和parseData监听的区别  
+} else if (obj.event === 'edit') {
+}
+});
+```  
+  - done监听和parseData监听的区别  
    done是表格dom渲染完成的监听函数，parseData是数据加载完成的监听函数。因此，如果要对dom进行操作，则需要在done中去处理。如下代码所示（根据条件，控制行复选框的示例）。
-	``` javascript
-	done: function(res, curr, count) {
-		$.each(res.data, function(index, obj) {
-			if (obj.children.length > 0) {
-				var domP = $('.layui-table-body').find('tr[data-index="' + obj.lay_table_index + '"]').find('td:first').find(
-					'p');
-				domP.find('input').remove();
-				domP.find('div').empty();
-			}
-		});
-	}
-	```
+``` javascript
+done: function(res, curr, count) {
+	$.each(res.data, function(index, obj) {
+		if (obj.children.length > 0) {
+			var domP = $('.layui-table-body').find('tr[data-index="' + obj.lay_table_index + '"]').find('td:first').find('p');
+			domP.find('input').remove();
+			domP.find('div').empty();
+		}
+	});
+}
+```
 
 7. #### 弹窗layer的常用操作
   - 如何在父页面调用弹窗页面的方法或赋值
-	``` javascript
-	layer.open({
-		  type: 2,
-		  content: 'test/iframe.html',
-		  success: function(layero, index){
-			var body = layer.getChildFrame('body', index);
-			//得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
-			var iframeWin = window[layero.find('iframe')[0]['name']];
-			console.log(body.html()) //得到iframe页的body内容
-			body.find('input').val('Hi，我是从父页来的')
-		  }
-	});      
-	```
+``` javascript
+layer.open({
+	  type: 2,
+	  content: 'test/iframe.html',
+	  success: function(layero, index){
+		var body = layer.getChildFrame('body', index);
+		//得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
+		var iframeWin = window[layero.find('iframe')[0]['name']];
+		console.log(body.html()) //得到iframe页的body内容
+		body.find('input').val('Hi，我是从父页来的')
+	  }
+});      
+```
 8. #### 选择器
   - `$('.mydiv .mydiv2')`和`$('.mydiv.mydiv2')`的区别  
 	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
@@ -136,13 +133,13 @@ LAYUI:
 	
  - $.load(url, data, func);  
     该方法将服务器加载的数据直接插入到指定DOM中。其中data如果存在则使用POST方式发送请求，不存在则使用GET方式发送请求。举个栗子。
-	``` html
-	<div id="ret"></div>
-	$('#ret').load(
-		"/greet",
-		{name: 'xiongchun'}
-	);
-	```
+``` html
+<div id="ret"></div>
+$('#ret').load(
+	"/greet",
+	{name: 'xiongchun'}
+);
+```
 
  - $.getScript()  
     该方法使用GET方式执行Ajax请求，从服务器加载并执行回传的JavaScript。其实也就是dataType="script"的ajax的缩写形式。
