--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -122,7 +122,7 @@ layer.open({
   - `$('.mydiv .mydiv2')`和`$('.mydiv.mydiv2')`的区别  
 	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
   - 取表单元素  
-    $("form [name='icon']")和$("input[name='icon']")。注意区别，选择器中间的空格。
+    `$("form [name='icon']")`和`$("input[name='icon']")`。注意区别，选择器中间的空格。
 
 9. #### 常用jqery方法
  - $(selector).toggle()
