--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端Layui Admin）.md
@@ -1,7 +1,7 @@
->[myclouds](https://gitee.com/osworks/MyClouds)采用前后端完全分离的开发模式。因此，同一套后台接口可以适配多套前端UI，我们缺省适配了[layui admin](https://www.layui.com/admin/)和[ant design pro](https://pro.ant.design/index-cn)。你可以根据实际情况，酌情选择。
+>[myclouds](https://gitee.com/osworks/MyClouds)采用前后端完全分离的开发模式。同一套后台接口可以适配多套前端UI，我们缺省适配了[layui admin](https://www.layui.com/admin/)和[ant design pro](https://pro.ant.design/index-cn)。你可以根据实际情况，酌情选择。
 
 ## 关于[layui admin](https://www.layui.com/admin/)版权，不得不先澄清的事
-[layui](https://www.layui.com) 是基于MIT开源协议的UI库，而layui admin则是layui官方基于layui开发的一套用于实现中后台管理的前端模版系统，且这套模版是需要**商业授权**的付费版本。因此，如果你选择基于layui admin开发，请您到其[官网](https://www.layui.com/admin/)获取商业授权。我们不会以任何形式提供layui admin的任何资源文件，也不接受任何关于其授权问题的咨询。*提示：myclouds使用layui admin的 iframe版本。*
+[layui](https://www.layui.com) 是基于MIT开源协议的UI库，而layui admin则是其官方基于layui开发的一套用于实现中后台管理的**商业授权**的前端模版系统。因此，如果你选择基于layui admin开发，请您到其[官网](https://www.layui.com/admin/)获取商业授权。我们不会以任何形式提供layui admin的任何资源文件，也不接受任何关于其授权问题的咨询。*提示：myclouds使用layui admin的 iframe版本。*
 > 提示：[layui admin](https://www.layui.com/admin/)（商业授权），[ant design pro](https://pro.ant.design/index-cn)（MIT开源协议）。这两套UI都是[myclouds](https://gitee.com/osworks/MyClouds)缺省支持和适配的非常优秀的前端开发框架。我们隆重推荐您首选layui admin，据说器大活好人见人爱。当然，如果你有专业的前端攻城狮的话，antd pro也是不错的选择。
 
 ## 可能有用的代码片段（JQuery + LayUI）
@@ -114,7 +114,7 @@ layer.open({
 		//得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
 		var iframeWin = window[layero.find('iframe')[0]['name']];
 		console.log(body.html()) //得到iframe页的body内容
-		body.find('input').val('Hi，我是从父页来的')
+		body.find('form [name="org_name"]').val('Hi，我是从父页来的');
 	  }
 });      
 ```
@@ -123,7 +123,11 @@ layer.open({
 	   前者为上级联关系的CSS类名选择，后者为同一个DOM元素的多个CSS类名选择。
   - 取表单元素  
     `$("form [name='icon']")`和`$("input[name='icon']")`。注意区别，选择器中间的空格。
-
+  - 实例  
+    ``` javascript
+  currTreeNodeData.label = $("#org-tree div:first div:first span:last").text();
+  currTreeNodeData.id = $("#org-tree div:first").attr('data-id');
+	```
 9. #### 常用jqery方法
  - $(selector).toggle()
    切换元素的可见状态。如果被选元素可见，则隐藏这些元素，如果被选元素隐藏，则显示这些元素。
@@ -143,3 +147,9 @@ $('#ret').load(
 
  - $.getScript()  
     该方法使用GET方式执行Ajax请求，从服务器加载并执行回传的JavaScript。其实也就是dataType="script"的ajax的缩写形式。
+		
+10. #### 给一个dom元素增加layer tips		
+只需要给dom元素增加lay属性即可。
+``` html
+lay-tips="要支持的噢" lay-offset="5"
+```
