--- a/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
+++ b/myclouds-docs/2.2.6 进阶 - 关于跨域问题的总结.md
@@ -79,9 +79,8 @@ gateway:
       '[/**]': 
         allowedOrigins: "*" 
         maxAge: 86400
-        allowedMethods:
-        - GET
-        - POST
+		allowedHeaders: "Content-Type"
+         allowedMethods: "GET, HEAD, POST, PUT, PATCH, DELETE, OPTIONS, TRACE"
 ```
 
 ## 总结一下
