--- a/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
+++ b/myclouds-docs/6.3.1 附录 - 日常开发手记（后端）.md
@@ -14,3 +14,6 @@
 
 2. ### 值对象VO类和实体Entity类有什么区别？  
 首先，它们都是简单JavaBean，包含一系列属性定义，但不包含行为方法。其中，*VO类为开发过程中根据业务需要而自定义的任意属性的组合，如(OutVO.java)；*Entity类的属性则和数据库表一一对应，一张表对应一个Entity类，且由代码生成工具myclouds-builder负责自动生成，也不允许对其进行手工维护，如(MyUserEntity.java)。
+
+3. ### 为什么在myclouds开发中，Controller中用于接收查询的请求也被定义为post请求？
+我们为了统一使用@RequestBody传递application/json的请求参数交互方式，所以全部请求都定义为了post。
