--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端）.md
@@ -124,17 +124,21 @@ layer.open({
   - 取表单元素  
     `$("form [name='icon']")`和`$("input[name='icon']")`。注意区别，选择器中间的空格。
   - 实例  
-    ``` javascript
-  currTreeNodeData.label = $("#org-tree div:first div:first span:last").text();
-  currTreeNodeData.id = $("#org-tree div:first").attr('data-id');
-	```
+``` javascript
+currTreeNodeData.label = $("#org-tree div:first div:first span:last").text();
+currTreeNodeData.id = $("#org-tree div:first").attr('data-id');
+```
+  - 根据属性选择
+ ``` javascript
+$('select[my-type]').each();
+$('select[my-type="is"]').each();
+```
+
 9. #### 常用jqery方法
  - $(selector).toggle()
    切换元素的可见状态。如果被选元素可见，则隐藏这些元素，如果被选元素隐藏，则显示这些元素。
-   
  - $(selector).toggleClass('class')  
     该方法检查每个元素中指定的类。如果不存在则添加类，如果已设置则删除之。
-	
  - $.load(url, data, func);  
     该方法将服务器加载的数据直接插入到指定DOM中。其中data如果存在则使用POST方式发送请求，不存在则使用GET方式发送请求。举个栗子。
 ``` html
@@ -144,12 +148,29 @@ $('#ret').load(
 	{name: 'xiongchun'}
 );
 ```
-
  - $.getScript()  
     该方法使用GET方式执行Ajax请求，从服务器加载并执行回传的JavaScript。其实也就是dataType="script"的ajax的缩写形式。
-		
+ - 数组和字符串之间转换
+``` javascript
+arr.join(',')；str.split(',');
+```
 10. #### 给一个dom元素增加layer tips		
 只需要给dom元素增加lay属性即可。
 ``` html
 lay-tips="要支持的噢" lay-offset="5"
 ```
+11. #### 如何使用数据字典的数据作为前端下拉框的数据源
+针对这种需求，我们layui的下拉框稍微扩展了一下。只需要在`<select />`标签上加几个属性就能实现将后台维护的数据字典作为下拉框的数据源。
+``` html
+<select name="status" my-type="user_status" my-placeholder="请选择"></select>
+```
+ - my-type  
+用于指明字典的`分组标识`。
+ - my-placeholder  
+如果，你想在下拉项中第一个选项为请选择，或初始不选中任何项目，都可以使用这个属性。
+ - my-filter  
+如果你想排除字典表中部分项目，则可以使用这个属性。如：`my-filter="1,9"`。
+ - my-selected  
+初始化缺省选中的项目。如：`my-selected="2"`。  
+
+ 嗯，这里只给出了我们扩展内容的使用方法。更多`<select />`组件的的使用方法请访问[layui](https://www.layui.com)的官方网站。
