--- a/myclouds-docs/6.3.3 附录 - 日常开发手记（前端）.md
+++ b/myclouds-docs/6.3.3 附录 - 日常开发手记（前端）.md
@@ -174,3 +174,10 @@ lay-tips="要支持的噢" lay-offset="5"
 初始化缺省选中的项目。如：`my-selected="2"`。  
 
  嗯，这里只给出了我们扩展内容的使用方法。更多`<select />`组件的的使用方法请访问[layui](https://www.layui.com)的官方网站。
+ 
+12. #### 前端如何防止Ajax请求重复提交
+Ajax请求被重复提交往往会导致一些业务问题。通常，我们在前端对提交事件做一些控制逻辑，对于MyClouds的前端开发，处理逻辑都预置了，你只需要在提交按钮上增加属性`my-submit`即可。
+``` html
+<button type="button" lay-submit my-submit lay-filter="btn-edit-submit" id="btn-edit-submit">修改</button>
+```
+对于大部分业务，前端控制后即可。但对于核心交易，完全依赖前端控制是不可行的。这种情况，需要结合后端，由后端老控制重复提交的问题。
