update myclouds-docs/1.2 入门 - 开发环境搭建.md.

--- a/myclouds-docs/1.2 入门 - 开发环境搭建.md
+++ b/myclouds-docs/1.2 入门 - 开发环境搭建.md
@@ -28,5 +28,6 @@
   启动成功后访问：http://127.0.0.1 即可进入登录页面。  
   登录账号：root 密码：111111
   ![输入图片说明](https://images.gitee.com/uploads/images/2018/1001/001211_69b123ff_431745.png "2018-10-01_001107.png")
+![输入图片说明](https://images.gitee.com/uploads/images/2020/0418/152101_a47c1751_431745.jpeg "MyClouds企业级微服务开源平台-资源模块.jpg")
 ## 后记  
   上述为写给普通用户比较简单通用且不容易出错的环境搭架方法。对于各路大仙请忽略，你可以使用自己偏爱的方法和工具来完成环境搭建工作。
