--- a/pangu_website/docs/tutorial-extras/文章标题测试.md
+++ b/pangu_website/docs/tutorial-extras/文章标题测试.md
@@ -1,5 +1,8 @@
 ---
+title: 文章标题测试1
+tags: [分布式事务, 注册中心]
 sidebar_position: 1
+slug: /tutorial-extras/manage-docs-versions
 ---
 
 # Manage Docs Versions
