--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -5,30 +5,34 @@ sidebar_position: 20
 slug: /thanksto
 ---
 
-## Getting Started
+:::info
+盘古开发框架的发布源于作者多年的开发经验积累和持续专注的开源热情，但更离不开全世界整个开源生态奠定的基础。鉴于此，我们特单独列出如下盘古框架依赖到的开源基金会/社区组织、开源项目，一起为他们对开源世界所做出的卓越贡献表示致敬和感谢。
+:::
 
-Get started by **creating a new site**.
+## 开源基金会/社区组织
 
-Or **try Docusaurus immediately** with **[docusaurus.new](https://docusaurus.new)**.
+- [Apache Software Foundation](https://www.apache.org/)
+- [GitHub](https://github.com/)
+- [Spring](https://spring.io/)
+- [开源中国](https://www.oschina.net/)
+- [Gitee](https://gitee.com/)
 
-## Generate a new site
+## 开源项目
+- [Spring Framework](https://spring.io/projects/spring-framework)
+- [Spring Boot](https://spring.io/projects/spring-boot)
+- [Aliware Nacos](https://nacos.io/en-us/index.html)
+- [Apache Dubbo](https://dubbo.apache.org/en/)
+- [MyBatis](https://mybatis.org/mybatis-3/) & [MyBatis Plus](https://github.com/baomidou/mybatis-plus)
+- [Apache ShenYu](https://shenyu.apache.org/)
+- [Laying Cahce](https://github.com/xiaolyuh/layering-cache)
+- [Apache ShardingSphere](https://shardingsphere.apache.org/index.html)
+- [Aliware Seata](https://seata.io/en-us/index.html)
+- [Lock4j](https://gitee.com/baomidou/lock4j)
+- [Hutool](https://hutool.cn/docs)
 
-Generate a new Docusaurus site using the **classic template**:
+:::caution
+上述列表排名不分先后，且不保证盘古框架依赖列表的完整性。
+:::
 
-```shell
-npm init docusaurus@latest my-website classic
-```
-
-## Start your site
-
-Run the development server:
-
-```shell
-cd my-website
-
-npx docusaurus start
-```
-
-Your site starts at `http://localhost:3000`.
-
-Open `docs/intro.md` and edit some lines: the site **reloads automatically** and displays your changes.
+## 下一步
+继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
