--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -18,20 +18,21 @@ slug: /thanksto
 - [Gitee](https://gitee.com/)
 
 ## 开源项目
-- [Spring Framework](https://spring.io/projects/spring-framework)
-- [Spring Boot](https://spring.io/projects/spring-boot)
-- [Aliware Nacos](https://nacos.io/en-us/index.html)
-- [Apache Dubbo](https://dubbo.apache.org/en/)
-- [MyBatis](https://mybatis.org/mybatis-3/) & [MyBatis Plus](https://github.com/baomidou/mybatis-plus)
-- [Apache ShenYu](https://shenyu.apache.org/)
-- [Laying Cahce](https://github.com/xiaolyuh/layering-cache)
-- [Apache ShardingSphere](https://shardingsphere.apache.org/index.html)
-- [Aliware Seata](https://seata.io/en-us/index.html)
-- [Lock4j](https://gitee.com/baomidou/lock4j)
-- [Hutool](https://hutool.cn/docs)
+- [Spring Framework](https://spring.io/projects/spring-framework)：A key element of Spring is infrastructural support at the application level. so that teams can focus on application-level business logic, without unnecessary ties to specific deployment environments.
+- [Spring Boot](https://spring.io/projects/spring-boot)：Spring Boot makes it easy to create stand-alone, production-grade Spring based Applications that you can "just run".
+- [Aliware Nacos](https://nacos.io/en-us/index.html)：An easy-to-use dynamic service discovery, configuration and service management platform for building cloud native applications.
+- [Apache Dubbo](https://dubbo.apache.org/en/)：A high-performance, java based open source RPC framework.Dubbo offers six key functionalities, which include transparent interface based RPC, intelligent load balancing, automatic service registration and discovery, high extensibility, runtime traffic routing, and visualized service governance.
+- [MyBatis](https://mybatis.org/mybatis-3/)：A first class persistence framework with support for custom SQL, stored procedures and advanced mappings.
+- [MyBatis Plus](https://github.com/baomidou/mybatis-plus)：A powerful enhanced toolkit of MyBatis for simplify development. This toolkit provides some efficient, useful, out-of-the-box features for MyBatis.
+- [Apache ShenYu](https://shenyu.apache.org/)：High-performance,multi-protocol,extensible,responsive API Gateway.
+- [Laying Cahce](https://github.com/xiaolyuh/layering-cache)：A multi-level caching framework that supports distributed environments. It uses Caffeine as a level 1 local cache and Redis as a level 2 centralized cache.
+- [ShardingSphere-JDBC](https://shardingsphere.apache.org/index.html)：ShardingSphere-JDBC defines itself as a lightweight Java framework that provides extra services at the Java JDBC layer. With the client end connecting directly to the database, it provides services in the form of a jar and requires no extra deployment and dependence. It can be considered as an enhanced JDBC driver, which is fully compatible with JDBC and all kinds of ORM frameworks.
+- [Aliware Seata](https://seata.io/en-us/index.html)：Seata is an open source distributed transaction solution that delivers high performance and easy to use distributed transaction services under a microservices architecture.
+- [Lock4j](https://gitee.com/baomidou/lock4j)：Lock4j is a distributed lock component.
+- [Hutool](https://hutool.cn/docs)：A set of tools that keep Java sweet.
 
 :::caution
-上述列表排名不分先后，且不保证盘古框架依赖列表的完整性。
+上述列表排名不分先后，且不保证盘古框架依赖资源列表的完整性。
 :::
 
 ## 下一步
