创建项目官网pang-website，编写开发指南

--- a/pangu-website/docs/quick-start/如何选择开发模式架构.md
+++ b/pangu-website/docs/quick-start/如何选择开发模式架构.md
@@ -15,9 +15,10 @@ slug: /quick-start/how-to-make-architecture
 :::
 
 ## 单体分层架构 VS 微服务分布式架构
-|  | 单体分层架构 | 微服务分布式架构  
+|<div style={{width:'80px'}}>-</div>| 单体分层架构 | 微服务分布式架构  
 --- | --- | ---
-部署运维 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | 单机部署或集群部署（简单）、运维成本低 | 分布式部署（略难）、运维成本高
+开发| 开发测试流程简单 | 开发测试流程相对复杂
+部署运维| 单机部署或集群部署（简单）、运维成本低 | 分布式部署（略难）、运维成本高
 团队人员 | 团队围绕一个应用开发、开发人员能力要求低 | 多任务团队协作简单、开发人员能力要求略高
 其它 | 扩展性弱、可靠性低、技术创新能力弱、企业对代码等数字资产管控能力弱 | 扩展性强、可靠性高、技术创新能力强、企业对代码等数字资产管控能力高
 
@@ -30,7 +31,7 @@ slug: /quick-start/how-to-make-architecture
 如下是从不同维度简单粗暴的以定量或定性的角度给出了一些选型建议，结论是孤立的脱离实际的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况酌情选择。正所谓，"鞋子合不合脚只有自己穿着才知道"。
 :::
 
-|  | 单体分层架构 | 微服务分布式架构  
+| - | 单体分层架构 | 微服务分布式架构  
 --- | :-: | :-:
 开发人员 < 3 | ✔ | 
 项目价值 < 50w | ✔ |
